--- a/index.html
+++ b/index.html
@@ -24,46 +24,9 @@
         <h1 class="login-title">Housezen Admin</h1>
         <p class="login-subtitle">Gestión Profesional de Propiedades</p>
 
-        <div class="login-tabs">
-            <button class="tab-btn active" data-tab="login">Iniciar Sesión</button>
-            <button class="tab-btn" data-tab="register">Registrarse</button>
-        </div>
-
-        <form id="loginForm" class="auth-form active">
-            <div class="form-group">
-                <label>Email</label>
-                <input type="email" id="login-email" required placeholder="tu@email.com">
-            </div>
-            <div class="form-group">
-                <label>Contraseña</label>
-                <input type="password" id="login-password" required placeholder="••••••••">
-            </div>
-            <button type="submit" class="auth-btn">
-                <i class="fa-solid fa-right-to-bracket"></i> Iniciar Sesión
-            </button>
-        </form>
-
-        <form id="registerForm" class="auth-form">
-            <div class="form-group">
-                <label>Nombre Completo</label>
-                <input type="text" id="register-name" required placeholder="Juan Pérez">
-            </div>
-            <div class="form-group">
-                <label>Email</label>
-                <input type="email" id="register-email" required placeholder="tu@email.com">
-            </div>
-            <div class="form-group">
-                <label>Contraseña</label>
-                <input type="password" id="register-password" required placeholder="••••••••" minlength="6">
-            </div>
-            <div class="form-group">
-                <label>Confirmar Contraseña</label>
-                <input type="password" id="register-password-confirm" required placeholder="••••••••" minlength="6">
-            </div>
-            <button type="submit" class="auth-btn">
-                <i class="fa-solid fa-user-plus"></i> Crear Cuenta
-            </button>
-        </form>
+        <button id="btnGoogleLogin" class="auth-btn google-btn">
+            <i class="fa-brands fa-google"></i> Continuar con Google
+        </button>
     </div>
 
     <div id="app-content">
