--- a/index.html
+++ b/index.html
@@ -86,21 +86,13 @@
                 <div class="sidebar-label">Sesión Activa</div>
                 <div class="sidebar-username" id="sidebar-username"></div>
             </div>
-            <div class="nav-item active" data-page="dashboard">
-                <i class="fa-solid fa-gauge-high"></i>
-                Dashboard
-            </div>
-            <div class="nav-item" data-page="logistica">
+            <div class="nav-item active" data-page="incidencias">
                 <i class="fa-solid fa-list-check"></i>
-                Logística de Incidencias
+                Incidencias
             </div>
             <div class="nav-item" data-page="propiedades">
                 <i class="fa-solid fa-building"></i>
                 Mis Propiedades
-            </div>
-            <div class="nav-item" data-page="tecnicos">
-                <i class="fa-solid fa-toolbox"></i>
-                Técnicos (Manitas)
             </div>
             <div class="nav-item" data-page="perfil">
                 <i class="fa-solid fa-user-tie"></i>
@@ -114,8 +106,8 @@
 
         <div class="menu-overlay" id="menuOverlay"></div>
 
-        <div class="page active" id="page-dashboard">
-            <h2 class="page-title">Dashboard</h2>
+        <div class="page active" id="page-incidencias">
+            <h2 class="page-title">Incidencias</h2>
 
             <div class="stats-grid">
                 <div class="stat-card urgent">
@@ -146,18 +138,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="card">
-                <div class="card-header">
-                    <div class="icon"><i class="fa-solid fa-fire"></i></div>
-                    INCIDENCIAS RECIENTES
-                </div>
-                <div id="dashboard-recent-incidents"></div>
-            </div>
-        </div>
-
-        <div class="page" id="page-logistica">
-            <h2 class="page-title">Logística de Incidencias</h2>
 
             <div class="filters-bar">
                 <select id="filter-estado" class="filter-select">
@@ -204,8 +184,8 @@
                             <input type="text" id="property-address" required>
                         </div>
                         <div class="form-group">
-                            <label>Referencia (ej: Piso 3A)</label>
-                            <input type="text" id="property-reference">
+                            <label>Código de Referencia (generado automáticamente)</label>
+                            <input type="text" id="property-reference" readonly placeholder="Se generará automáticamente">
                         </div>
                         <div class="form-group">
                             <label>Nombre del Inquilino</label>
@@ -231,65 +211,6 @@
                         </div>
                         <button type="submit" class="submit-btn">
                             <i class="fa-solid fa-save"></i> Guardar Propiedad
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <div class="page" id="page-tecnicos">
-            <h2 class="page-title">Técnicos (Manitas)</h2>
-
-            <button class="add-btn" id="btnAddTecnico">
-                <i class="fa-solid fa-plus"></i> Añadir Técnico
-            </button>
-
-            <div id="tecnicos-container"></div>
-
-            <div id="tecnico-form-modal" class="modal">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 id="tecnico-modal-title">Nuevo Técnico</h3>
-                        <button class="close-modal" id="closeTecnicoModal">
-                            <i class="fa-solid fa-xmark"></i>
-                        </button>
-                    </div>
-                    <form id="tecnicoForm">
-                        <input type="hidden" id="tecnico-id">
-                        <div class="form-group">
-                            <label>Nombre del Técnico</label>
-                            <input type="text" id="tecnico-name" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Especialidad</label>
-                            <select id="tecnico-specialty">
-                                <option value="">Selecciona...</option>
-                                <option value="Fontanería">Fontanería</option>
-                                <option value="Electricidad">Electricidad</option>
-                                <option value="Cerrajería">Cerrajería</option>
-                                <option value="Carpintería">Carpintería</option>
-                                <option value="Albañilería">Albañilería</option>
-                                <option value="Pintura">Pintura</option>
-                                <option value="Climatización">Climatización</option>
-                                <option value="General">General</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>Teléfono</label>
-                            <input type="tel" id="tecnico-phone">
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" id="tecnico-email">
-                        </div>
-                        <div class="form-group">
-                            <label class="checkbox-label">
-                                <input type="checkbox" id="tecnico-active" checked>
-                                <span>Técnico disponible</span>
-                            </label>
-                        </div>
-                        <button type="submit" class="submit-btn">
-                            <i class="fa-solid fa-save"></i> Guardar Técnico
                         </button>
                     </form>
                 </div>
@@ -353,10 +274,8 @@
     <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/ui.js"></script>
-    <script src="js/dashboard.js"></script>
     <script src="js/incidents.js"></script>
     <script src="js/properties.js"></script>
-    <script src="js/tecnicos.js"></script>
     <script src="js/profile.js"></script>
     <script src="js/app.js"></script>
 </body>
