--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@
 
     <div id="toast"></div>
 
-    <script src="js/config.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/incidents.js"></script>
-    <script src="js/properties.js"></script>
-    <script src="js/profile.js"></script>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/config.js"></script>
+    <script type="module" src="js/auth.js"></script>
+    <script type="module" src="js/ui.js"></script>
+    <script type="module" src="js/incidents.js"></script>
+    <script type="module" src="js/properties.js"></script>
+    <script type="module" src="js/profile.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
