--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <h1 class="login-title">Housezen Admin</h1>
         <p class="login-subtitle">Gestión Profesional de Propiedades</p>
 
-        <button id="btnGoogleLogin" class="auth-btn google-btn" onclick="loginWithGoogle()">
-            <i class="fa-brands fa-google"></i> Entrar con Google
-        </button>
+        <button id="btnGoogleLogin" class="auth-btn google-btn">
+    <i class="fa-brands fa-google"></i> Entrar con Google
+</button>
     </div>
 
     <div id="app-content" style="display: none;">
