--- a/index.html
+++ b/index.html
@@ -145,18 +145,18 @@
             <input type="hidden" id="property-id">
             
             <div class="form-group">
-                <label>Dirección</label>
-                <input type="text" id="property-address" required placeholder="Ej: Calle Mayor 1, 2B">
+                <label>Nombre del Piso</label>
+                <input type="text" id="property-name" required placeholder="Ej: Ático Centro">
             </div>
 
             <div class="form-group">
-                <label>Código de Referencia (automático)</label>
-                <input type="text" id="property-reference" readonly style="background: #f3f4f6; font-weight: bold;">
+                <label>Dirección</label>
+                <input type="text" id="property-address" required placeholder="Calle Falsa 123">
             </div>
 
-            <div class="form-group" style="display: flex; align-items: center; gap: 10px; margin-top: 10px;">
-                <input type="checkbox" id="property-active" checked>
-                <label for="property-active" style="margin: 0;">Propiedad Activa</label>
+            <div class="form-group">
+                <label>Código de Vinculación</label>
+                <input type="text" id="property-reference" readonly style="background: #eee;">
             </div>
 
             <button type="submit" class="submit-btn">Guardar Propiedad</button>
