--- a/index.html
+++ b/index.html
@@ -145,18 +145,18 @@
             <input type="hidden" id="property-id">
             
             <div class="form-group">
-                <label>Nombre del Piso</label>
-                <input type="text" id="property-name" required placeholder="Ej: Ático Centro">
+                <label>Nombre (ej: Piso Centro)</label>
+                <input type="text" id="property-name" required>
             </div>
 
             <div class="form-group">
-                <label>Dirección</label>
-                <input type="text" id="property-address" required placeholder="Calle Falsa 123">
+                <label>Dirección Completa</label>
+                <input type="text" id="property-address" required>
             </div>
 
             <div class="form-group">
-                <label>Código de Vinculación</label>
-                <input type="text" id="property-reference" readonly style="background: #eee;">
+                <label>Código de Vinculación (Automático)</label>
+                <input type="text" id="property-reference" readonly style="background: #f3f4f6;">
             </div>
 
             <button type="submit" class="submit-btn">Guardar Propiedad</button>
@@ -164,6 +164,7 @@
     </div>
 </div>
 
+    
     <div id="toast"></div>
 
     <script type="module" src="js/config.js"></script>
