--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <div id="login-page">
@@ -23,10 +22,9 @@
         </div>
         <h1 class="login-title">Housezen Admin</h1>
         <p class="login-subtitle">Gestión Profesional de Propiedades</p>
-
         <button id="btnGoogleLogin" class="auth-btn google-btn">
-    <i class="fa-brands fa-google"></i> Entrar con Google
-</button>
+            <i class="fa-brands fa-google"></i> Entrar con Google
+        </button>
     </div>
 
     <div id="app-content" style="display: none;">
@@ -54,7 +52,7 @@
             <div class="nav-item" data-page="perfil">
                 <i class="fa-solid fa-user-tie"></i> Mi Perfil
             </div>
-            <div class="nav-item nav-logout" onclick="logout()">
+            <div class="nav-item nav-logout" id="btnLogout">
                 <i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesión
             </div>
         </nav>
@@ -99,8 +97,7 @@
                 </select>
             </div>
 
-            <div id="incidents-logistics-container">
-                </div>
+            <div id="incidents-logistics-container"></div>
         </div>
 
         <div class="page" id="page-propiedades">
@@ -135,44 +132,33 @@
         </div>
     </div>
 
-  <div id="property-form-modal" class="modal">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h3 id="property-modal-title">Nueva Propiedad</h3>
-            <button class="close-modal" id="closePropertyModal">&times;</button>
+    <div id="property-form-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="property-modal-title">Nueva Propiedad</h3>
+                <button class="close-modal" id="closePropertyModal">&times;</button>
+            </div>
+            <form id="propertyForm">
+                <input type="hidden" id="property-id">
+                <div class="form-group">
+                    <label>Nombre (ej: Piso Centro)</label>
+                    <input type="text" id="property-name" required>
+                </div>
+                <div class="form-group">
+                    <label>Dirección Completa</label>
+                    <input type="text" id="property-address" required>
+                </div>
+                <div class="form-group">
+                    <label>Código de Vinculación (Automático)</label>
+                    <input type="text" id="property-reference" readonly style="background: #f3f4f6;">
+                </div>
+                <button type="submit" class="submit-btn">Guardar Propiedad</button>
+            </form>
         </div>
-        <form id="propertyForm">
-            <input type="hidden" id="property-id">
-            
-            <div class="form-group">
-                <label>Nombre (ej: Piso Centro)</label>
-                <input type="text" id="property-name" required>
-            </div>
-
-            <div class="form-group">
-                <label>Dirección Completa</label>
-                <input type="text" id="property-address" required>
-            </div>
-
-            <div class="form-group">
-                <label>Código de Vinculación (Automático)</label>
-                <input type="text" id="property-reference" readonly style="background: #f3f4f6;">
-            </div>
-
-            <button type="submit" class="submit-btn">Guardar Propiedad</button>
-        </form>
     </div>
-</div>
 
-    
     <div id="toast"></div>
 
-    <script type="module" src="js/config.js"></script>
-    <script type="module" src="js/auth.js"></script>
-    <script type="module" src="js/ui.js"></script>
-    <script type="module" src="js/incidents.js"></script>
-    <script type="module" src="js/properties.js"></script>
-    <script type="module" src="js/profile.js"></script>
-   <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
