--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </button>
     </div>
 
-    <div id="app-content" style="display: none;">
+    <div id="app-content" class="hidden">
         <div class="top-bar">
             <button class="menu-btn" id="menuBtn">
                 <i class="fa-solid fa-bars"></i>
